--- a/project-8/style.css
+++ b/project-8/style.css
@@ -58,9 +58,20 @@ label{
     text-align: center;
     font-size: 20px;
     color: white;
-    
-    
+     
 }
+.form {
+    position: relative;
+    margin: 20px 0 40px;
+    width: 100%;
+  }
+
+  .form label {
+    position: absolute;
+    top: -10px;
+    left: 0;
+    pointer-events: none;
+  }
 
 .container .form-container .btn{
     text-align: center;
@@ -89,5 +100,18 @@ label{
 .container .form-container p a{
     color: rgb(164, 162, 182);
     font-weight: 700;
+}
+
+.form label span{
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+    transition: 0.3 cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.form input:focus + label span,
+.form input:valid + label span{
+    transform: translateY(-30px);
+    color: lightsteelblue;
 }
 
