--- a/project-31/style.css
+++ b/project-31/style.css
@@ -9,7 +9,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
     margin: 0;
 }
 
