--- a/project-32/style.css
+++ b/project-32/style.css
@@ -49,6 +49,7 @@ body {
     border: none;
     color: #fff;
     background-color: transparent;
+    cursor: pointer;
 }
 
 .note textarea {
@@ -58,6 +59,10 @@ body {
     border: none;
     height: 400px;
     width: 100%;
+    padding: 20px;
+}
+
+.main {
     padding: 20px;
 }
 
