--- a/project-33/style.css
+++ b/project-33/style.css
@@ -16,7 +16,18 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center;
+
 }
+
+#replay {
+    color: white;
+    font-family: sans-serif;
+    background-color: #3498db;
+    border: none;
+    padding: 5px;
+
+}
+
 
 .counter.hide {
     transform: translate(-50%, -50%);
