--- a/project-47/style.css
+++ b/project-47/style.css
@@ -3,14 +3,30 @@
 }
 
 body {
-    background-color: #f4f4f4;
     font-family: sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    overflow: hidden;
-    margin: 0;
-    padding: 10px;
+    min-height: 100vh;
+}
+
+h1 {
+    margin: 27px 0;
+    text-align: center;
+    color: rgb(132, 118, 101);
+}
+
+.container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 30px;
+    row-gap: 30px;
+    width: 960px;
+}
+
+.container img {
+    width: 300px;
+    height: 300px;
+
 }
