--- a/project-48/style.css
+++ b/project-48/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    list-style: none;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -50,6 +49,7 @@ input::placeholder {
     background-color: #fff;
     padding: 0;
     margin: 0;
+    list-style: none;
 }
 
 .todos li {
@@ -59,7 +59,7 @@ input::placeholder {
     padding: 1rem 2rem;
 }
 
-.todos li.complated {
+.todos li.completed {
     color: #b6b6b6;
     text-decoration: line-through;
 }
